# calls-transcript-analyser

./: .gitignore  .pre-commit-config.yaml  BONUS.md  CI_CD_FIXES.md  COMPLETE_FLOW.md  DATABASE_INDEXES.md  DESIGN_NOTES.md  Dockerfile  README.md  SCALING_GUIDE.md  SYSTEM_OVERVIEW.txt  SYSTEM_TECHNICAL_DETAIL.txt  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  ai_insights.py  api.py  api_optimized.py  celery_app.py  config.py  crud.py  data_ingestion.py  database.py  models.py  performance.py  schemas.py  tasks.py
app/auth/: dependencies.py  jwt_service.py  models.py  routes.py
scripts/: check_db.py  ingest_data.py  ingest_data_simple.py  load_test.py  optimize_database.py  scale_app.py  setup_dev.py  simple_ingest.py  test_ai.py  test_ci.py  test_db.py  test_ml_models.py
tests/: __init__.py  conftest.py  test_ai_insights.py  test_api.py  test_basic.py
